--- a/css/screen.css
+++ b/css/screen.css
@@ -80,21 +80,21 @@ header:after {
 #filter { 
 	float: left; 
 	margin-left: 10px; 
-	margin-bottom: 10px; 
+	margin-bottom: 5px; 
 	margin-top: 3px; 
 	color: white; 
 	font-family: sans-serif; 
 	font-size: 12px;
 	
-	background-color: red; 
+	border-color: darkgrey;
 }
 
 #showFormButton { 
 	float: right; 
 	margin-top: 3px; 
 	margin-right: 3px; 
-
-	background-color: pink;
+	
+	background-color: white;
 }
 
 #addContacts { 
@@ -133,4 +133,22 @@ header:after {
 	margin-left: 10px; 
 	margin-bottom: 3px; 
 	clear: both;
+}
+
+.contact-container input, .contact-container select { 
+	display: block; 
+	margin: 0px; 
+	float: left; 
+}
+	
+.contact-container .name, .contact-container .address { 
+	clear: left; 
+}
+
+.contact-container input { 
+	margin: 0px 10px 3px 0px; 
+}
+
+.contact-container form button { 
+	margin: 5px 0 0; 
 }
