--- a/css/screen.css
+++ b/css/screen.css
@@ -3,63 +3,71 @@
 }
 	
 .contact-container { 
-	width:400px; 
-	border:1px solid #aaa; 
+	width: 400px; 
+	border: 1px solid #aaa; 
 	margin:0 10px 10px 0; 
-	position:relative; 
-	float:left; 
-	font-family:sans-serif; 
-	color:#333; 
-	background-color:#eee; 
+	position: relative; 
+	float: left; 
+	font-family: sans-serif; 
+	color: #333; 
+	background-color: #eee; 
 }
 
 .contact-container h1 { 
-	margin:0; 
-	font-weight:normal; 
+	margin: 0; 
+	font-weight: normal; 
 	font-size: 18px; 
-	background-color: aqua; 
+	
+	/* background-color: aqua; */
 }
 
 .contact-container h1 span { 
-	float:right; 
-	font-size:14px; 
-	line-height:24px; 
-	font-weight:bold; 
+	float: right; 
+	font-size: 14px; 
+	line-height: 24px; 
+	font-weight: bold; 
 }
 
 .contact-container img { 
-	border-width:1px; 
-	border-style:solid; 
-	border-color:#fff; 
-	border-right-color:#aaa; 
-	border-bottom-color:#aaa; 
-	margin-right:10px; 
-	float:left; 
+	border-width: 1px; 
+	border-style: solid; 
+	border-color: #fff; 
+	border-right-color: #aaa; 
+	border-bottom-color: #aaa; 
+	margin-right: 10px; 
+	float: left; 
 }
 
 .contact-container div { 
-	margin-bottom:24px; 
-	font-size:12px; 
-	background-color: yellow
+	margin-bottom: 24px; 
+	font-size: 12px; 
+	/* background-color: yellow; */
 }
 
 .contact-container button { 
 	margin-top:10px; 
 	float:right; 
+	
+	background-color: white;
 }
 
 header { 
 	margin-bottom: 10px; 
 	color: white;
-	background-color: green;
+
+	border: 1px solid black;
+	background-color: gray;
 }
 
 header:after { 
 	content: ""; 
+	
 	display: block; 
 	height: 0; 
+	
 	visibility: hidden; 
 	clear: both; 
+	
 	font-size: 0; 
 	line-height: 0; 
 }
@@ -68,6 +76,7 @@ header {
 	margin-bottom: 10px;
 	margin-top: 10px;
 }
+
 header:after { 
 	content: ""; 
 	display: block; 
@@ -92,20 +101,22 @@ header:after {
 #showFormButton { 
 	float: right; 
 	margin-top: 3px; 
-	margin-right: 3px; 
+	margin-right: 3px;
+	margin-bottom: auto; 
 	
 	background-color: white;
 }
 
 #addContacts { 
 	display: none; 
-	width: 500px; 
+	width: 820px; 
+	
+	border: 1px solid #ffffff;
+	
 	float:left; 
 	clear: both; 
-	font-family:sans-serif; 
-	font-size: 14px; 
 	
-	background-color: fuchsia;
+	background-color: #d3d3d3;
 }
 
 #addContacts label, #addContacts input{ 
@@ -116,11 +127,15 @@ header:after {
 }
 	
 #addContacts label { 
-	width: 60px;
-	margin-left: 10px; 
+	width: 96px;
+	margin-left: 5px; 
+	
 	text-align: left; 
-	line-height: 25px; 
-	color: white; 
+	line-height: 25px;
+	 
+	font-family:sans-serif; 
+	font-size: 12px; 
+	color: black; 
 }
 
 #addContacts label[for="name"], #addContacts label[for="position"] { 
@@ -128,11 +143,21 @@ header:after {
 }
 
 #add { 
-	float: left; 
 	display: block; 
-	margin-left: 10px; 
+	
+	margin-left: 5px; 
 	margin-bottom: 3px; 
 	clear: both;
+	
+	background-color: white;
+}
+
+.delete {
+	margin-right: 3px;
+}
+
+.edit {
+	margin-right: 3px;
 }
 
 .contact-container input, .contact-container select { 
@@ -151,4 +176,6 @@ header:after {
 
 .contact-container form button { 
 	margin: 5px 0 0; 
+	
+	background-color: white:
 }
